--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "HarmonyOS Sans", Arial, sans-serif !important;
+}
+
+/* H3 titles font */
+h3,
+h2,
+h1 {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif !important;
 }
