fix sort window 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,15 +84,25 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-@keyframes loading {
+@keyframes loadingSlide {
   0% {
-    transform: translateX(-100%);
+    left: -100%;
+    width: 40%;
+  }
+  50% {
+    left: 30%;
+    width: 70%;
   }
   100% {
-    transform: translateX(100%);
+    left: 100%;
+    width: 40%;
   }
 }
 
-.animate-loading {
-  animation: loading 1.2s linear infinite;
+.loading-bar {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  background-color: rgb(4 120 87); /* emerald-800 */
+  animation: loadingSlide 1.2s ease-in-out infinite;
 }
