--- a/app/globals.css
+++ b/app/globals.css
@@ -23,9 +23,14 @@ body {
   background: var(--background);
   color: var(--foreground);
   /* font-family: "HarmonyOS Sans", Arial, sans-serif !important; */
+  /* font-family:
+  "Cormorant Garamond", ui-serif, Georgia, Cambria, "Times New Roman", Times,
+  serif !important; */
   font-family:
     "Cormorant Garamond", ui-serif, Georgia, Cambria, "Times New Roman", Times,
     serif !important;
+  font-variant-numeric: lining-nums;
+  line-height: 1.2;
 }
 
 /* H3 titles font */
